[package]
name = "tsk"
version = "3.0.1"
description = "A simple task manager"
edition = "2021"
authors = [ "Emilly M.S./S.H." ]
readme = "README.md"
repository = "https://github.com/em-s-h/tsk"
license = "GPL-3.0-or-later"

[dependencies]
directories = "5.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
